--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "history": "^4.9.0",
+    "jquery": "^3.4.1",
+    "json-loader": "^0.5.7",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-flagkit": "^1.0.2",
+    "react-icons": "^3.7.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
